# subcc

./: .gitignore  README.md
src/: CMakeLists.txt
src/interpreter/: assembly.cc  interpreter.cc  interpreter.h  interpreter_test.cc  interpreter_test.h  main.cc
src/lexer_generator/: lexer_generator.h  lexer_generator_test.cc  lexer_generator_test.h  main.cc
src/parser/: parser.cc  parser.h  parser_main.cc  parser_test.cc  parser_test.h
src/parser_generator/: main.cc  parser_generator.cc  parser_generator.h  parser_generator_test.cc  parser_generator_test.h
src/subcc/: code_generator.cc  code_generator.h  compiler.cc  compiler.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  symbol_table.cc  symbol_table.h  syntax_tree.cc  syntax_tree.h  test.cc  test.h  three_address.cc  three_address.h  type.cc  type.h  utility.cc  utility.h
src/subcc/output/: a1.c  a2.c  assembly.cc  test.c
src/subcc/subc_code/: a1.c  a2.c  test.c
src/subcc_interpreter/: assembly.cc  subcc_interpreter.cc  subcc_interpreter.h  subcc_interpreter_main.cc  subcc_interpreter_test.cc  subcc_interpreter_test.h
